--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -25,8 +25,8 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_button"
-        android:text="@string/plus_text"
-        android:textColor="@color/white_color"
+        android:text="@string/add"
+        android:textColor="@color/colorWhite"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
