--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -28,6 +28,7 @@
 
 
     <Button
+        android:onClick="OnAddClick"
         android:id="@+id/btn_add"
         android:layout_width="55dp"
         android:layout_height="0dp"
@@ -43,6 +44,7 @@
         app:layout_constraintStart_toEndOf="@+id/btn_order" />
 
     <Button
+        android:onClick="OnOrderClick"
         android:id="@+id/btn_order"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
