--- a/app/src/main/res/layout/activity_basket.xml
+++ b/app/src/main/res/layout/activity_basket.xml
@@ -28,7 +28,7 @@
 
 
     <Button
-        android:onClick="OnAddClick"
+        android:onClick="onAddClick"
         android:id="@+id/btn_add"
         android:layout_width="55dp"
         android:layout_height="0dp"
@@ -44,7 +44,7 @@
         app:layout_constraintStart_toEndOf="@+id/btn_order" />
 
     <Button
-        android:onClick="OnOrderClick"
+        android:onClick="onOrderClick"
         android:id="@+id/btn_order"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
