--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:onClick="OnCancelClick"
+            android:onClick="onCancelClick"
             android:id="@+id/btn_close_selection"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
